--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <name>org.suskalo/coffi</name>
-  <description>A Foreign Function Interface in Clojure for JDK 18.</description>
+  <description>A Foreign Function Interface in Clojure for JDK 22+.</description>
   <url>https://github.com/IGJoshua/coffi</url>
   <licenses>
     <license>
